appId: com.speedautosystems.vmi.rental
---
- launchApp
- tapOn: Sign Up
- tapOn: Name *
- inputRandomPersonName
- tapOn: Email Address *
- inputRandomEmail
- tapOn: Company Name *
- inputRandomPersonName
- tapOn: Password *
- inputText: ${PASSWORD}
- tapOn: Retype Password *
- inputText: ${PASSWORD}
- tapOn: Next
- tapOn: Activation Code
- inputText: 13245
- tapOn: CONTINUE
- assertVisible: Activation code not valid

  # maestro test e2e/register_test.yaml -e PASSWORD=123456